
// usage:
// protoc  --java_out=./storage/src/main/java  ./storage/src/main/java/org/apache/kylin/storage/hbase/coprocessor/endpoint/protobuf/II.proto

option java_package = "org.apache.kylin.storage.hbase.coprocessor.endpoint.generated";
option java_outer_classname = "IIProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

message IIRequest {
    required bytes type = 1;
    required bytes filter = 2;
    required bytes projector = 3;
    required bytes aggregator = 4;
    optional bytes tsRange = 5;
}

message IIResponse {
  message IIRow {
    required bytes columns = 1;
    optional bytes measures = 2;
  }
  repeated IIRow rows = 1;
  optional int64 lastFinalizedTime = 2;
}

service RowsService {
  rpc getRows(IIRequest)
    returns (IIResponse);
}
